--- a/sass/style.scss
+++ b/sass/style.scss
@@ -77,7 +77,7 @@ $thetransition: all .25s cubic-bezier(1, .25, 0, .75) 0s;
 @mixin div1 {
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    width: 100%;
     @media screen and (max-width: 800px) {
         flex-direction: column;
     }
@@ -93,6 +93,13 @@ $thetransition: all .25s cubic-bezier(1, .25, 0, .75) 0s;
     @media screen and (max-width: 800px) {
         font-size: 1em;
     }
+}
+
+@mixin chiffres_hover {
+    font-style: italic;
+    color: rgb(255, 166, 0);
+    cursor: crosshair;
+    transform: scale(3);
 }
 
 @mixin div3 {
@@ -272,6 +279,9 @@ html {
                     .chiffres {
                         @include chiffres;
                     }
+                    .chiffres:hover {
+                        @include chiffres_hover;
+                    }
                 }
             }
             .div3 {
@@ -305,6 +315,9 @@ html {
                 p {
                     .chiffres {
                         @include chiffres;
+                    }
+                    .chiffres:hover {
+                        @include chiffres_hover;
                     }
                 }
             }
@@ -340,6 +353,9 @@ html {
                     .chiffres {
                         @include chiffres;
                     }
+                    .chiffres:hover {
+                        @include chiffres_hover;
+                    }
                 }
             }
             .div3 {
@@ -373,6 +389,9 @@ html {
                 p {
                     .chiffres {
                         @include chiffres;
+                    }
+                    .chiffres:hover {
+                        @include chiffres_hover;
                     }
                 }
             }
@@ -408,6 +427,9 @@ html {
                     .chiffres {
                         @include chiffres;
                     }
+                    .chiffres:hover {
+                        @include chiffres_hover;
+                    }
                 }
             }
             .div3 {
@@ -441,6 +463,9 @@ html {
                 p {
                     .chiffres {
                         @include chiffres;
+                    }
+                    .chiffres:hover {
+                        @include chiffres_hover;
                     }
                 }
             }
@@ -476,6 +501,9 @@ html {
                     .chiffres {
                         @include chiffres;
                     }
+                    .chiffres:hover {
+                        @include chiffres_hover;
+                    }
                 }
             }
             .div3 {
@@ -510,6 +538,9 @@ html {
                     .chiffres {
                         @include chiffres;
                     }
+                    .chiffres:hover {
+                        @include chiffres_hover;
+                    }
                 }
             }
             .div3 {
@@ -543,6 +574,9 @@ html {
                 p {
                     .chiffres {
                         @include chiffres;
+                    }
+                    .chiffres:hover {
+                        @include chiffres_hover;
                     }
                 }
             }
