--- a/sass/style.scss
+++ b/sass/style.scss
@@ -91,7 +91,7 @@ $thetransition: all .25s cubic-bezier(1, .25, 0, .75) 0s;
     font-size: 1.5em;
     color: rgb(218, 218, 10);
     @media screen and (max-width: 800px) {
-        font-size: 1em;
+        font-size: 0.9em;
     }
 }
 
@@ -208,7 +208,7 @@ html {
             text-align: center;
             width: 100vw;
             background-color: black;
-            z-index: 10;
+            z-index: 50;
             a {
                 color: white;
                 text-decoration: none;
@@ -281,6 +281,11 @@ html {
                     }
                     .chiffres:hover {
                         @include chiffres_hover;
+                    }
+                }
+                @media screen and (max-width: 970px) {
+                    p {
+                        font-size: 0.9em;
                     }
                 }
             }
