--- a/sass/style.scss
+++ b/sass/style.scss
@@ -261,6 +261,11 @@ html {
                 @include btn;
             }
         }
+        @media screen and (max-width: 970px) {
+            #spansoleil {
+                padding-top: 40px;
+            }
+        }
         .div1 {
             @include div1;
             .div2 {
