--- a/sass/style.scss
+++ b/sass/style.scss
@@ -641,4 +641,8 @@ html {
             display: none;
         }
     }
+    .lienPortfolio {
+        color: white;
+        text-decoration: none;
+    }
 }
